--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.1.0",
     "typescript": "^3.9.5"
   },
   "scripts": {
@@ -50,5 +51,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "http://localhost:5000/",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.11"
+  }
 }
