--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.1.0",
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
+    "dotenv": "^8.2.0",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
