커플인증화면/메일검색 완료

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./server.js",
-    "client": "cd client && yarn start",
     "server": "node server.js",
-    "dev": "concurrently --kill-others-on-fail \"nodemon ./server.js\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"nodemon ./server.js\" \"yarn client\"",
+    "client": "cd client && yarn start"
   },
   "repository": {
     "type": "git",
