--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.19.2",
     "connected-react-router": "^6.8.0",
     "dotenv": "^8.2.0",
+    "immer": "^9.0.5",
     "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
