--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "2021-recorddate",
   "version": "1.0.0",
+  "engines": {
+    "node": "14.16.0",
+    "npm": "7.19.1",
+    "yarn": "1.22.10"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -28,7 +33,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "webpack": "^5.51.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
