--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "heroku-postbuild": "npx webpack",
     "nodemon": "nodemon ./server.js",
     "server": "nodemon ./server.js",
-    "dev": "concurrently --kill-others-on-fail \"nodemon ./server.js\" \"yarn client\"",
-    "client": "cd client && yarn start"
+    "client": "cd client && yarn start",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "dev:server": "npm start",
+    "dev:client": "cd client && npm start"
   },
   "repository": {
     "type": "git",
