--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "heroku-postbuild": "npx webpack",
+    "heroku-postbuild": "cd client && npm install && npm run build",
     "nodemon": "nodemon ./server.js",
     "server": "nodemon ./server.js",
     "client": "cd client && yarn start",
