--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.1.0",
-    "typescript": "^3.9.5",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
