--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
