--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "heroku-postbuild": "cd client && yarn install && yarn run build",
     "nodemon": "nodemon ./server.js dev",
     "server": "nodemon ./server.js",
     "client": "cd client && yarn start",
