--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "yarn": "1.22.10"
   },
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "heroku-postbuild": "cd client && yarn install && yarn run build",
