api 요청시 You need to enable JavaScript to run this app 메세지 수정

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "bugs": {
     "url": "https://github.com/happyjy/2021-toyproj-RecordDate/issues"
   },
-  "homepage": "https://github.com/happyjy/2021-toyproj-RecordDate#readme",
+  "homepage": ".",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
