setupProxy제거, axiosConfig 개발,제품모드 설정 추가

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-books",
+  "name": "ourdatinghistory",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -54,7 +54,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000/",
   "devDependencies": {
     "@types/styled-components": "^5.1.11"
   }
