--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000/",
   "devDependencies": {
     "@types/styled-components": "^5.1.11"
   }
