--- a/awsConfig.json
+++ b/awsConfig.json
@@ -1,5 +1,5 @@
 {
-  "accessKeyId": "AKIA3IOPOFXGD5PKEYWF",
-  "secretAccessKey": "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",
+  "accessKeyId": "AKIA3IOPOFXGARG7GP45",
+  "secretAccessKey": "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",
   "region": "ap-northeast-2"
 }
